# hdbc

./: .gitignore  CHANGELOG.md  COPYRIGHT  HDBC.cabal  LICENSE  Makefile  Memory.txt  README.md  README.txt  Setup.lhs  default.nix
.github/workflows/: main.yml
Control/Monad/: HDBC.hs
Database/: HDBC.hs
Database/HDBC/: ColTypes.hs  DriverUtils.hs  Locale.hs  SqlValue.hs  Statement.hs  Types.hs  Utils.hs
debian/: README  README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  hdbc-default.ex  hdbc.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
doc/: Database-HDBC-ColTypes.html  Database-HDBC-DriverUtils.html  Database-HDBC-Types.html  Database-HDBC.html  doc-index-A.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-W.html  doc-index.html  hdbc.interface  index.html
testsrc/: TestInfrastructure.hs  TestSqlValue.hs  dummydriver.hs  runtests.hs  sqlvalues.hs
