Name: HDBC
Version: 2.3.1.2
License: BSD3
Maintainer: Nicolas Wu <nicolas.wu@gmail.com>
Author: John Goerzen
homepage: https://github.com/hdbc/hdbc
Copyright: Copyright (c) 2005-2011 John Goerzen
license-file: LICENSE
extra-source-files: LICENSE, Makefile, README.md
Category: Database
synopsis: Haskell Database Connectivity
Description: HDBC provides an abstraction layer between Haskell programs and SQL
 relational databases. This lets you write database code once, in
 Haskell, and have it work with any number of backend SQL databases
 (MySQL, Oracle, PostgreSQL, ODBC-compliant databases, etc.)
Stability: Stable
Build-Type: Simple

Cabal-Version: >=1.8

source-repository head
  type:            git
  location:        https://github.com/hdbc/hdbc.git

flag splitBase
  description: Choose the new smaller, split-up base package.

library
  if flag(splitBase)
    Build-Depends: base>=3 && <5, old-time, time>=1.1.2.4 && <=1.5, bytestring, containers, old-locale
  else
    Build-Depends: base<3
  Build-Depends: mtl, convertible >= 1.0.10.0, text, utf8-string, Decimal >= 0.2.1, uuid >= 1.0.0

  -- Hack for cabal-install weirdness.  cabal-install forces base 3,
  -- though it works fine for Setup.lhs manually.  Fix.
  if impl(ghc >= 6.9)
     build-depends: base >= 4

  GHC-Options: -O2 -Wall -fno-warn-orphans

  Exposed-Modules: Database.HDBC, Database.HDBC.Types, Database.HDBC.DriverUtils,
    Database.HDBC.ColTypes, Database.HDBC.Statement, Database.HDBC.SqlValue,
    Database.HDBC.Locale
  Other-Modules: Database.HDBC.Utils
  Extensions: ExistentialQuantification, CPP, MultiParamTypeClasses,
    FlexibleContexts, TypeSynonymInstances, TypeOperators, RankNTypes,
    FlexibleInstances
    
Test-Suite sqlvalues
  Type:             exitcode-stdio-1.0
  Main-Is:          sqlvalues.hs
  Hs-Source-Dirs:   testsrc
  Build-Depends:    base
                  , QuickCheck
                  , quickcheck-instances
                  , quickcheck-assertions
                  , hspec
                  , HDBC
                  , text
                  , bytestring
                  , time
                  , convertible
                  , old-time
                  , Decimal
